# yaahc

./: .gitignore  .travis.yml  CMakeLists.txt  README
include/ahc/: common.hpp  tree.hpp
samples/: CMakeLists.txt  compress.cpp  uncompress.cpp
src/: CMakeLists.txt  itree.hpp  tree.cpp
src/fgk/: node.hpp  tree.cpp  tree.hpp
test/: CMakeLists.txt  decoding.cpp  encdec.cpp  encoding.cpp
